[gd_scene load_steps=13 format=3 uid="uid://dksg7xvws4eiu"]

[ext_resource type="Script" uid="uid://bn6ijxl4g35gc" path="res://Script/enemy_ship.gd" id="1_uu0uu"]
[ext_resource type="Texture2D" uid="uid://bib6ejtkymlgs" path="res://Addons/kenney_pixel-shmup/Tiles/tile_0008.png" id="2_uu0uu"]
[ext_resource type="Texture2D" uid="uid://cevnp70raax76" path="res://Addons/kenney_pixel-shmup/Tiles/tile_0005.png" id="4_itjlf"]
[ext_resource type="Texture2D" uid="uid://ct5pvy3lucpxh" path="res://Addons/kenney_pixel-shmup/Tiles/tile_0007.png" id="5_lo7gp"]

[sub_resource type="Curve" id="Curve_24ne4"]
_limits = [0.0, 1.5, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, -0.0957291, 0, 1, Vector2(1, 0.904271), -3.66793, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_lpmmr"]
offsets = PackedFloat32Array(0.00765306, 0.104592, 0.269231, 0.813187, 0.966555)
colors = PackedColorArray(0.894118, 0.478431, 0, 1, 0.786301, 0.151608, 0.0468674, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_bifem"]
offsets = PackedFloat32Array(0.0336538, 0.514423, 0.793269, 0.971154)
colors = PackedColorArray(1, 1, 1, 1, 0.905882, 0.258824, 0, 1, 0.933333, 0.0901961, 0.0666667, 1, 0.933333, 0.0901961, 0.0666667, 0.270588)

[sub_resource type="Gradient" id="Gradient_lo7gp"]
offsets = PackedFloat32Array(0.0144231, 0.149038, 0.802885, 0.899038)
colors = PackedColorArray(0.847059, 0.247059, 0.137255, 1, 0, 0, 0, 1, 0.0980392, 0.0980392, 0.0980392, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7u1b4"]
size = Vector2(28, 28)

[sub_resource type="Animation" id="Animation_itjlf"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShipSprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShipSprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShipSprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ShipSprite/ExplosionsParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ShipSprite/ExplosionsParticles2D2:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ShipSprite/SmokeParticles2D:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ShipSprite/FinalExplosionParticles2D:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ShipSprite:scale:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("ShipSprite:scale:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("ShipSprite:position:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("ShipSprite:position:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("ShipSprite:texture")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_lpmmr"]
resource_name = "hit"
length = 2.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.0365563, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.00999999, 0.0333333, 0.0433333, 0.4, 0.41, 0.8, 0.81, 0.9, 1.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShipSprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.0365563, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.00999999, 0.0333333, 0.0433333, 0.4, 0.41, 0.8, 0.81, 0.9, 1.4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShipSprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.0365563, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.00999999, 0.0333333, 0.0433333, 0.4, 0.41, 0.8, 0.81, 0.9, 1.4)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ShipSprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.00999999, 0.0333333, 0.0433333, 0.4, 0.41, 0.8, 0.81, 0.9, 1.4)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ShipSprite/ExplosionsParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0333333, 0.130651, 0.399844, 0.497162, 0.799689, 0.897007, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ShipSprite/ExplosionsParticles2D2:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.0333333, 0.123984, 0.403883, 0.494534, 0.803728, 0.894379, 1.33333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ShipSprite/SmokeParticles2D:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.0333333, 0.971227),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ShipSprite/FinalExplosionParticles2D:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.93333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ShipSprite:scale:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.3, -0.00632912, 0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.13333, 1.96667)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("ShipSprite:scale:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.8, -0.2, -0.00210971, 0.3, -0.0035162, 0.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.13333, 1.96667)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("ShipSprite:position:x")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.13333, 2)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("ShipSprite:position:y")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -30, -0.25, 0, 0.25, 0, -100, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.13333, 2)
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("ShipSprite:texture")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(1.93333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lo7gp"]
_data = {
&"RESET": SubResource("Animation_itjlf"),
&"hit": SubResource("Animation_lpmmr")
}

[node name="EnemyShip" type="StaticBody2D" groups=["enemies"]]
z_index = 1
script = ExtResource("1_uu0uu")
minFireInterval = 0.5
maxFireInterval = 1.0

[node name="ShipSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
z_index = 1
rotation = -3.14159

[node name="SmokeParticles2D" type="CPUParticles2D" parent="ShipSprite"]
unique_name_in_owner = true
rotation = 3.14159
emitting = false
amount = 16
texture = ExtResource("2_uu0uu")
lifetime = 0.3
explosiveness = 0.56
lifetime_randomness = 0.15
gravity = Vector2(50, -150)
angular_velocity_min = -64.86
angular_velocity_max = 77.84
damping_max = 65.741
angle_min = -366.7
angle_max = 73.3
scale_amount_min = 0.2
scale_amount_max = 0.4
scale_amount_curve = SubResource("Curve_24ne4")
color_ramp = SubResource("Gradient_lpmmr")

[node name="SmokePositionMarker" type="Marker2D" parent="ShipSprite"]
unique_name_in_owner = true
position = Vector2(-7, 1.00002)
rotation = 3.14159

[node name="SmokePositionMarker2" type="Marker2D" parent="ShipSprite"]
unique_name_in_owner = true
position = Vector2(10, 1.99997)
rotation = 3.14159

[node name="SmokePositionMarker3" type="Marker2D" parent="ShipSprite"]
unique_name_in_owner = true
position = Vector2(1.77463e-05, 7)
rotation = 3.14159

[node name="ExplosionsParticles2D" type="CPUParticles2D" parent="ShipSprite"]
rotation = 3.14159
emitting = false
amount = 2
texture = ExtResource("4_itjlf")
lifetime = 0.3
one_shot = true
explosiveness = 0.29
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 9.26
gravity = Vector2(0, 0)
angle_min = -371.6
angle_max = 197.4
scale_amount_min = 0.1
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_bifem")

[node name="ExplosionsParticles2D2" type="CPUParticles2D" parent="ShipSprite"]
rotation = 3.14159
emitting = false
amount = 3
texture = ExtResource("5_lo7gp")
lifetime = 0.3
one_shot = true
lifetime_randomness = 0.1
emission_shape = 1
emission_sphere_radius = 14.59
gravity = Vector2(0, 0)
angle_min = -371.6
angle_max = 197.4
scale_amount_min = 0.1
scale_amount_max = 0.2
color_ramp = SubResource("Gradient_bifem")

[node name="FinalExplosionParticles2D" type="CPUParticles2D" parent="ShipSprite"]
rotation = 3.14159
emitting = false
amount = 20
texture = ExtResource("2_uu0uu")
lifetime = 0.8
one_shot = true
explosiveness = 1.0
randomness = 0.14
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, -700)
initial_velocity_min = 97.1
initial_velocity_max = 239.58
angular_velocity_min = -290.32
angular_velocity_max = 116.13
radial_accel_min = -19.35
radial_accel_max = 37.1
scale_amount_min = 0.2
color_ramp = SubResource("Gradient_lo7gp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
visible = false
shape = SubResource("RectangleShape2D_7u1b4")

[node name="GunMarker" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="ShotTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="EnemyShipAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_lo7gp")
}

[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
